<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TVBox</string>
    <string name="app_home">Home</string>
    <string name="app_source"></string>

    // Home Page //
    <string name="hm_ok">Load Complete</string>
    <string name="hm_notok">Load Fail</string>
    <string name="hm_retry">Retry</string>
    <string name="hm_cancel">Cancel</string>
    <string name="hm_exit">Press BACK again to EXIT</string>
    <string name="hm_exit_live">Press BACK again to exit LiveTV</string>
    <string name="hm_date1">dd MMM yyyy</string>
    <string name="hm_date2">EE hh:mm aa</string>
    <string name="hm_hist">History</string>
    <string name="hm_live">Live</string>
    <string name="hm_search">Search</string>
    <string name="hm_push">Push</string>
    <string name="hm_file">File</string>
    <string name="hm_fav">Star</string>
    <string name="hm_setting">Menu</string>
    <string name="hm_hist_del">Removed from History</string>
    <string name="hm_cache_del">Cache Cleared</string>

    // Play Detail Page //
    <string name="det_play">Play</string>
    <string name="det_expand">Expand</string>
    <string name="det_search">Search</string>
    <string name="det_sort">Sort</string>
    <string name="det_fav">Favorite</string>
    <string name="det_fav_add">Added to Favorite</string>
    <string name="det_fav_del">Removed from Favorite</string>
    <string name="det_fav_star">★ Favorite</string>
    <string name="det_fav_unstar">☆ Favorite</string>
    <string name="det_url">Play URL Copied</string>
    <string name="det_source"></string>
    <string name="det_year">Year</string>
    <string name="det_area">Area</string>
    <string name="det_lang">Language</string>
    <string name="det_type">Genre</string>
    <string name="det_actor">Cast</string>
    <string name="det_dir">Director</string>
    <string name="det_des"></string>

    // Settings Menu Page //
    <string name="mn_config">Configuration Address</string>
    <string name="mn_home">Source</string>
    <string name="mn_home_show">Source Display</string>
    <string name="mn_home_type">Type</string>
    <string name="mn_history_num">History</string>
    <string name="mn_wall_change">Wallpaper</string>
    <string name="mn_wall_load">Loading Wallpaper</string>
    <string name="mn_wall_reset">Reset</string>
    <string name="mn_play_type">Player</string>
    <string name="mn_play_decode">Decode</string>
    <string name="mn_search">Search Display</string>
    <string name="mn_ratio">Screen Ratio</string>
    <string name="mn_pip">PIP</string>
    <string name="mn_preview">Preview Window</string>
    <string name="mn_webview">WebView</string>
    <string name="mn_render">Render</string>
    <string name="mn_backup">Backup/Restore</string>
    <string name="mn_dns">DNS</string>
    <string name="mn_locale">Language</string>
    <string name="mn_about">About</string>

    // Settings Dialog Pop-Up //
    <string name="dia_source">Select Source</string>
    <string name="dia_hm_type">Select Display Type</string>
    <string name="dia_history">Select History to Keep</string>
    <string name="dia_history_list">Configuration History List</string>
    <string name="dia_player">Select Player Type</string>
    <string name="dia_decode">Select IJK Decoder</string>
    <string name="dia_search">Select Search Mode</string>
    <string name="dia_ratio">Select Screen Ratio</string>
    <string name="dia_render">Select Render Mode</string>
    <string name="dia_bkres">Backup / Restore</string>
    <string name="dia_bkpkg">Select Backup Package</string>
    <string name="dia_dns">Select DNS</string>
    <string name="dia_locale">Select Language</string>

    // Settings Backup Restore Page //
    <string name="set_bkup_ok">Backup Success</string>
    <string name="set_bkup_del">Backup Deleted</string>
    <string name="set_bkup_fail">Backup Fail</string>
    <string name="set_bkup_fail_hk">Backup Fail (Hawk)</string>
    <string name="set_bkup_fail_db">Backup Fail (DB)</string>
    <string name="set_rest_ok">Restore Success, please Restart</string>
    <string name="set_rest_fail_hk">Restore Fail (Hawk)</string>
    <string name="set_rest_fail_db">Restore Fail (DB)</string>
    <string name="set_permission_ok">Write Permission Granted</string>
    <string name="set_permission_fail1">Failed to get Permission</string>
    <string name="set_permission_fail2">Failed to get Permission, please grant in Settings</string>

    // Activity Page //
    <string name="act_fav">Favorite</string>
    <string name="act_fav_sel">Select to</string>
    <string name="act_fav_rm">Remove</string>
    <string name="act_drive">Folder</string>
    <string name="act_hist">History</string>
    <string name="act_hist_sel">Select to</string>
    <string name="act_hist_rm">Remove</string>
    <string name="act_search">Search</string>
    <string name="act_search_clr">Clear</string>
    <string name="act_search_del">Backspace</string>
    <string name="act_search_rem">Remote</string>
    <string name="act_search_trend">Trending</string>
    <string name="act_search_txt">Enter Search Title</string>
    <string name="act_settings">Settings</string>
    <string name="act_home">Home</string>
    <string name="act_player">Player</string>
    <string name="act_system">System</string>

    // Fast Search Page //
    <string name="fs_show_all">All</string>
    <string name="fs_results">Search Results</string>
    <string name="global_search">global search</string>
    <string name="search">search</string>
    <string name="Select_source">Select source</string>

    // VOD //
    <string name="vod_audio">Select Audio Track</string>
    <string name="vod_no_audio">No Audio Track</string>
    <string name="vod_sub_option">Subtitle Options</string>
    <string name="vod_sub_sel">Select Subtitle</string>
    <string name="vod_sub_na">No Internal Subtitle</string>
    <string name="vod_sub_int">Internal</string>
    <string name="vod_sub_ext">External</string>
    <string name="vod_sub_remote">Search</string>
    <string name="vod_sub_size">Size</string>
    <string name="vod_sub_delay">Delay</string>
    <string name="vod_sub_search">Search</string>
    <string name="vod_sub_off">Subtitle Off</string>
    <string name="vod_remaining_time">Remaining Time</string>
    <string name="vod_ends_at">Ends at</string>

    <string name="settings">settings</string>
    <string name="Clear_Cache">ClearCache</string>

    <!-- The title of a track selection view for video tracks. [CHAR LIMIT=20] -->
    <string name="exo_track_selection_title_video">Video</string>
    <!-- The title of a track selection view for audio tracks. [CHAR LIMIT=20] -->
    <string name="exo_track_selection_title_audio">Audio</string>
    <!-- The title of a track selection view for text (i.e. subtitle or caption) tracks. [CHAR LIMIT=20] -->
    <string name="exo_track_selection_title_text">Text</string>
    <!-- An option in a track selection view (e.g. a view that allows the user to choose between multiple media tracks) to indicate that no track should be selected. Examples: When playing a video, if this option is selected for audio, playback will proceed without sound. If this option is selected for video, playback will proceed without visual output. [CHAR LIMIT=20] -->
    <string name="exo_track_selection_none">None</string>
    <!-- An option in a track selection view (e.g. a view that allows the user to choose between multiple media tracks) to indicate that the automatic or default track should be selected. Examples: If there are multiple audio tracks in different languages, the automatic selection would normally be the track in the user's native language. If there are multiple video tracks at different qualities, the automatic selection would normally be the highest quality track that can be played without buffering over the current network. [CHAR LIMIT=20] -->
    <string name="exo_track_selection_auto">Auto</string>
    <!-- Name of a media track about which nothing is known. [CHAR LIMIT=20] -->
    <string name="exo_track_unknown">Unknown</string>
    <!-- Resolution of a video track. [CHAR LIMIT=20] -->
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <!-- Describes an audio track with one channel. [CHAR LIMIT=20] -->
    <string name="exo_track_mono">Mono</string>
    <!-- Describes an audio track with two channels. [CHAR LIMIT=20] -->
    <string name="exo_track_stereo">Stereo</string>
    <!-- Describes a surround sound audio track. [CHAR LIMIT=40] -->
    <string name="exo_track_surround">Surround sound</string>
    <!-- Describes a 5.1 surround sound (https://en.wikipedia.org/wiki/5.1_surround_sound) audio track. [CHAR LIMIT=40] -->
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <!-- Describes a 7.1 (https://en.wikipedia.org/wiki/7.1_surround_sound) audio track. [CHAR LIMIT=40] -->
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <!-- Describes an alternate track, e.g. a video recorded from a different viewpoint. [CHAR LIMIT=40] -->
    <string name="exo_track_role_alternate">Alternate</string>
    <!-- Describes a supplementary track. [CHAR LIMIT=40] -->
    <string name="exo_track_role_supplementary">Supplementary</string>
    <!-- Describes a track containing commentary. [CHAR LIMIT=40] -->
    <string name="exo_track_role_commentary">Commentary</string>
    <!-- Describes a track with closed captions. [CHAR LIMIT=40] -->
    <string name="exo_track_role_closed_captions">CC</string>
    <!-- Describes the bitrate of a media track in Megabits (https://en.wikipedia.org/wiki/Megabit) per second. [CHAR LIMIT=20] -->
    <string name="exo_track_bitrate">%1$.2f Mbps</string>

    <!-- Defines a way of appending an item to a list of items. For example appending "banana" to "apple, pear" to get "apple, pear, banana". Note: the command separator will appear between all consecutive list items, so do not use an equivalent of 'and'. [CHAR LIMIT=40] -->
    <string name="exo_item_list">%1$s，%2$s</string>

    <string-array name="doh_name">
        <item>System</item>
        <item>Tencent</item>
        <item>Alibaba</item>
        <item>360</item>
    </string-array>

    <string-array name="doh_url">
        <item />
        <item>https://doh.pub/dns-query</item>
        <item>https://dns.alidns.com/dns-query</item>
        <item>https://doh.360.cn/dns-query</item>
    </string-array>

</resources>
